[package]
name = "linajedb"
version = "0.1.0"
edition = "2024"
default-run = "linajedb"

[dependencies]
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "mysql", "postgres", "sqlite", "uuid", "chrono", "bigdecimal"] }
neo4rs = "0.7"
mongodb = "2.8"
bson = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dbase = "0.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
futures = "0.3"
